# langchain-learning

./: .gitignore  README.md  pyproject.toml
content/: opiniones_usuarios.xlsx  opiniones_usuarios_clasificadas.xlsx  preguntas_respuestas.xlsx
scripts/: __init__.py  langchain_async.py  langchain_simple.py
scripts/agents/: class1-E1.py  class1.2.py  class1.py  class2-E1.py  class2-E2.py  class2.2.py  class2.py
scripts/agents/tools/: README_HITL.md  hitl_interaction.py  tools.py
scripts/configs/: config.py  langfuse.py  llm_factory.py
scripts/langchain/: async.py  chat.py  chat_redis.py  friendly.py
scripts/pipelines/: __init__.py  base.py
scripts/utils/: io_utils.py  langchain_shims.py
